--- a/applications/electron/package.json
+++ b/applications/electron/package.json
@@ -3,7 +3,7 @@
   "name": "cdt-cloud-blueprint",
   "description": "CDT Cloud Blueprint is a template for building custom web-based C/C++ tools",
   "productName": "CDT Cloud Blueprint",
-  "version": "1.34.4",
+  "version": "1.38.0",
   "main": "scripts/theia-electron-main.js",
   "license": "EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0",
   "author": {
@@ -26,9 +26,12 @@
     "target": "electron",
     "frontend": {
       "config": {
-        "applicationName": "CDTCloudBlueprint",
+        "applicationName": "CDT Cloud Blueprint",
+        "defaultIconTheme": "theia-file-icons",
         "preferences": {
           "toolbar.showToolbar": true,
+          "files.enableTrash": false,
+          "security.workspace.trust.startupPrompt": "never",
           "security.workspace.trust.enabled": false
         }
       }
@@ -46,56 +49,56 @@
     }
   },
   "dependencies": {
-    "@theia/bulk-edit": "1.34.4",
-    "@theia/callhierarchy": "1.34.4",
-    "@theia/console": "1.34.4",
-    "@theia/core": "1.34.4",
-    "@theia/debug": "1.34.4",
-    "@theia/editor": "1.34.4",
-    "@theia/editor-preview": "1.34.4",
-    "@theia/electron": "1.34.4",
-    "@theia/external-terminal": "1.34.4",
-    "@theia/file-search": "1.34.4",
-    "@theia/filesystem": "1.34.4",
-    "@theia/getting-started": "1.34.4",
-    "@theia/git": "1.34.4",
-    "@theia/keymaps": "1.34.4",
-    "@theia/markers": "1.34.4",
-    "@theia/messages": "1.34.4",
-    "@theia/memory-inspector": "1.34.4",
-    "@theia/metrics": "1.34.4",
-    "@theia/mini-browser": "1.34.4",
-    "@theia/monaco": "1.34.4",
-    "@theia/navigator": "1.34.4",
-    "@theia/outline-view": "1.34.4",
-    "@theia/output": "1.34.4",
-    "@theia/plugin-dev": "1.34.4",
-    "@theia/plugin-ext": "1.34.4",
-    "@theia/plugin-ext-vscode": "1.34.4",
-    "@theia/preferences": "1.34.4",
-    "@theia/process": "1.34.4",
-    "@theia/property-view": "1.34.4",
-    "@theia/scm": "1.34.4",
-    "@theia/scm-extra": "1.34.4",
-    "@theia/search-in-workspace": "1.34.4",
-    "@theia/task": "1.34.4",
-    "@theia/terminal": "1.34.4",
-    "@theia/timeline": "1.34.4",
-    "@theia/toolbar": "1.34.4",
-    "@theia/typehierarchy": "1.34.4",
-    "@theia/userstorage": "1.34.4",
-    "@theia/variable-resolver": "1.34.4",
-    "@theia/vsx-registry": "1.34.4",
-    "@theia/workspace": "1.34.4",
+    "@theia/bulk-edit": "1.38.0",
+    "@theia/callhierarchy": "1.38.0",
+    "@theia/console": "1.38.0",
+    "@theia/core": "1.38.0",
+    "@theia/debug": "1.38.0",
+    "@theia/editor": "1.38.0",
+    "@theia/editor-preview": "1.38.0",
+    "@theia/electron": "1.38.0",
+    "@theia/external-terminal": "1.38.0",
+    "@theia/file-search": "1.38.0",
+    "@theia/filesystem": "1.38.0",
+    "@theia/getting-started": "1.38.0",
+    "@theia/git": "1.38.0",
+    "@theia/keymaps": "1.38.0",
+    "@theia/markers": "1.38.0",
+    "@theia/messages": "1.38.0",
+    "@theia/memory-inspector": "1.38.0",
+    "@theia/metrics": "1.38.0",
+    "@theia/mini-browser": "1.38.0",
+    "@theia/monaco": "1.38.0",
+    "@theia/navigator": "1.38.0",
+    "@theia/outline-view": "1.38.0",
+    "@theia/output": "1.38.0",
+    "@theia/plugin-dev": "1.38.0",
+    "@theia/plugin-ext": "1.38.0",
+    "@theia/plugin-ext-vscode": "1.38.0",
+    "@theia/preferences": "1.38.0",
+    "@theia/process": "1.38.0",
+    "@theia/property-view": "1.38.0",
+    "@theia/scm": "1.38.0",
+    "@theia/scm-extra": "1.38.0",
+    "@theia/search-in-workspace": "1.38.0",
+    "@theia/task": "1.38.0",
+    "@theia/terminal": "1.38.0",
+    "@theia/timeline": "1.38.0",
+    "@theia/toolbar": "1.38.0",
+    "@theia/typehierarchy": "1.38.0",
+    "@theia/userstorage": "1.38.0",
+    "@theia/variable-resolver": "1.38.0",
+    "@theia/vsx-registry": "1.38.0",
+    "@theia/workspace": "1.38.0",
     "fs-extra": "^9.0.1",
-    "cdt-cloud-blueprint-updater": "1.34.4",
-    "cdt-cloud-blueprint-product": "1.34.4",
-    "cdt-cloud-blueprint-launcher": "1.34.4",
+    "cdt-cloud-blueprint-updater": "1.38.0",
+    "cdt-cloud-blueprint-product": "1.38.0",
+    "cdt-cloud-blueprint-launcher": "1.38.0",
     "theia-traceviewer": "0.2.0-next.75c9da4.0",
-    "@eclipse-cdt-cloud/blueprint-example-generator": "1.34.4"
+    "@eclipse-cdt-cloud/blueprint-example-generator": "1.38.0"
   },
   "devDependencies": {
-    "@theia/cli": "1.34.4",
+    "@theia/cli": "1.38.0",
     "@types/js-yaml": "^3.12.0",
     "@types/yargs": "17.0.7",
     "@wdio/cli": "^6.10.2",
