--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "version": "1.34.4",
+  "version": "1.38.0",
   "license": "EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0",
   "author": {
     "name": "CDT Cloud"
@@ -18,7 +18,7 @@
     "node": ">=12.14.1"
   },
   "devDependencies": {
-    "@theia/cli": "1.34.4",
+    "@theia/cli": "1.38.0",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/eslint-plugin-tslint": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
@@ -64,14 +64,14 @@
     "theia-extensions/*"
   ],
   "resolutions": {
-    "**/multer": "1.4.4-lts.1",
-    "**/@theia/application-package": "1.34.4",
-    "**/@theia/core": "1.34.4",
-    "**/@theia/editor": "1.34.4",
-    "**/@theia/filesystem": "1.34.4",
-    "**/@theia/request": "1.34.4",
-    "**/@theia/variable-resolver": "1.34.4",
-    "**/timeline-chart": "0.3.0-next.82a0ac9.0",
-    "**/tsp-typescript-client": "0.4.0-next.143a5ab.0"
+    "@types/puppeteer": "^5.4.0",
+    "**/@theia/application-package": "1.38.0",
+    "**/@theia/core": "1.38.0",
+    "**/@theia/editor": "1.38.0",
+    "**/@theia/filesystem": "1.38.0",
+    "**/@theia/request": "1.38.0",
+    "**/@theia/variable-resolver": "1.38.0",
+    "**/msgpackr": "1.8.3",
+    "**/multer": "1.4.4-lts.1"
   }
 }
